--- a/TrashCollector/TrashCollector.csproj
+++ b/TrashCollector/TrashCollector.csproj
@@ -203,6 +203,7 @@
       <DependentUpon>Global.asax</DependentUpon>
     </Compile>
     <Compile Include="Models\AccountViewModels.cs" />
+    <Compile Include="Models\Address.cs" />
     <Compile Include="Models\Customer.cs" />
     <Compile Include="Models\Day.cs" />
     <Compile Include="Models\Employee.cs" />
