--- a/TrashCollector/TrashCollector.csproj
+++ b/TrashCollector/TrashCollector.csproj
@@ -196,14 +196,27 @@
     <Compile Include="App_Start\RouteConfig.cs" />
     <Compile Include="App_Start\Startup.Auth.cs" />
     <Compile Include="Controllers\AccountController.cs" />
+    <Compile Include="Controllers\CustomersController.cs" />
     <Compile Include="Controllers\DaysController.cs" />
     <Compile Include="Controllers\HomeController.cs" />
     <Compile Include="Controllers\ManageController.cs" />
     <Compile Include="Global.asax.cs">
       <DependentUpon>Global.asax</DependentUpon>
     </Compile>
+    <Compile Include="Migrations\201801031621519_InitialCreate.cs" />
+    <Compile Include="Migrations\201801031621519_InitialCreate.Designer.cs">
+      <DependentUpon>201801031621519_InitialCreate.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Migrations\201801032039180_CustomerMigration.cs" />
+    <Compile Include="Migrations\201801032039180_CustomerMigration.Designer.cs">
+      <DependentUpon>201801032039180_CustomerMigration.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Migrations\201801032152178_CustomerMigration2.cs" />
+    <Compile Include="Migrations\201801032152178_CustomerMigration2.Designer.cs">
+      <DependentUpon>201801032152178_CustomerMigration2.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Migrations\Configuration.cs" />
     <Compile Include="Models\AccountViewModels.cs" />
-    <Compile Include="Models\Address.cs" />
     <Compile Include="Models\Customer.cs" />
     <Compile Include="Models\Day.cs" />
     <Compile Include="Models\Employee.cs" />
@@ -277,6 +290,11 @@
     <Content Include="Views\Days\Details.cshtml" />
     <Content Include="Views\Days\Edit.cshtml" />
     <Content Include="Views\Days\Index.cshtml" />
+    <Content Include="Views\Customers\Create.cshtml" />
+    <Content Include="Views\Customers\Delete.cshtml" />
+    <Content Include="Views\Customers\Details.cshtml" />
+    <Content Include="Views\Customers\Edit.cshtml" />
+    <Content Include="Views\Customers\Index.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
@@ -288,6 +306,17 @@
     <Content Include="packages.config" />
     <None Include="Project_Readme.html" />
     <Content Include="Scripts\jquery-1.10.2.min.map" />
+  </ItemGroup>
+  <ItemGroup>
+    <EmbeddedResource Include="Migrations\201801031621519_InitialCreate.resx">
+      <DependentUpon>201801031621519_InitialCreate.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\201801032039180_CustomerMigration.resx">
+      <DependentUpon>201801032039180_CustomerMigration.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\201801032152178_CustomerMigration2.resx">
+      <DependentUpon>201801032152178_CustomerMigration2.cs</DependentUpon>
+    </EmbeddedResource>
   </ItemGroup>
   <PropertyGroup>
     <VisualStudioVersion Condition="'$(VisualStudioVersion)' == ''">10.0</VisualStudioVersion>
