--- a/TrashCollector/TrashCollector.csproj
+++ b/TrashCollector/TrashCollector.csproj
@@ -211,6 +211,10 @@
     <Compile Include="Migrations\201801041538595_CustomerMigration.Designer.cs">
       <DependentUpon>201801041538595_CustomerMigration.cs</DependentUpon>
     </Compile>
+    <Compile Include="Migrations\201801042212263_CustomerModelPickupDay.cs" />
+    <Compile Include="Migrations\201801042212263_CustomerModelPickupDay.Designer.cs">
+      <DependentUpon>201801042212263_CustomerModelPickupDay.cs</DependentUpon>
+    </Compile>
     <Compile Include="Migrations\Configuration.cs" />
     <Compile Include="Models\AccountViewModels.cs" />
     <Compile Include="Models\Customer.cs" />
@@ -309,6 +313,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="Migrations\201801041538595_CustomerMigration.resx">
       <DependentUpon>201801041538595_CustomerMigration.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\201801042212263_CustomerModelPickupDay.resx">
+      <DependentUpon>201801042212263_CustomerModelPickupDay.cs</DependentUpon>
     </EmbeddedResource>
   </ItemGroup>
   <PropertyGroup>
